real/out/2025-09-27/network-policies/netpol_allow-backend-tier-to-database-tier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-tier-to-database-tier
spec:
  podSelector:
    matchLabels:
      subnet: database-tier
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          subnet: backend-tier
    - podSelector:
        matchLabels:
          subnet: backend-tier
          topology.kubernetes.io/zone: zone-a
    - podSelector:
        matchLabels:
          subnet: backend-tier
          topology.kubernetes.io/zone: zone-b
    - podSelector:
        matchLabels:
          subnet: backend-tier
          topology.kubernetes.io/zone: zone-c
    ports:
    - protocol: TCP
      port: 3306
    - protocol: TCP
      port: 5432
