real/out/2025-09-27/network-policies/netpol_allow-internet-to-frontend-tier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-to-frontend-tier
spec:
  podSelector:
    matchLabels:
      subnet: frontend-tier
  policyTypes:
  - Ingress
  ingress:
  - {}
