real/out/2025-09-27/network-policies/netpol_default-deny-backend-tier.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-backend-tier
spec:
  podSelector:
    matchLabels:
      subnet: backend-tier
  policyTypes:
  - Ingress
  - Egress
